lab3/target/classes/META-INF/fabric8/openshift/product-catalog-lab3-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 8ab7a941768fd361103b1e90c4c1fbba5d4e2e2c
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=product-catalog-lab3&var-version=1.0.0
  labels:
    provider: fabric8
    project: product-catalog-lab3
    version: 1.0.0
    group: com.redhat.coolstore
  name: product-catalog-lab3
spec:
  replicas: 1
  selector:
    project: product-catalog-lab3
    provider: fabric8
    group: com.redhat.coolstore
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 8ab7a941768fd361103b1e90c4c1fbba5d4e2e2c
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=product-catalog-lab3&var-version=1.0.0
      labels:
        provider: fabric8
        project: product-catalog-lab3
        version: 1.0.0
        group: com.redhat.coolstore
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: my-database-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: my-database-secret
        - name: JAVA_OPTIONS
          value: -Dspring.profiles.active=openshift
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        image: product-catalog-lab3:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: product-catalog-lab3:1.0.0
    type: ImageChange
