lab3/target/classes/META-INF/fabric8/openshift/product-catalog-lab3-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 8ab7a941768fd361103b1e90c4c1fbba5d4e2e2c
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    provider: fabric8
    project: product-catalog-lab3
    version: 1.0.0
    group: com.redhat.coolstore
  name: product-catalog-lab3
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    project: product-catalog-lab3
    provider: fabric8
    group: com.redhat.coolstore
